{
  "version": 4,
  "terraform_version": "1.8.0",
  "serial": 9,
  "lineage": "2cdae0c6-3e3d-d0d9-72dd-0618f54af969",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04f1b917806393faa",
            "arn": "arn:aws:ec2:eu-central-1:538773749506:instance/i-0d59f321d68af632c",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d59f321d68af632c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a537befa6ab35693",
            "private_dns": "ip-10-0-1-144.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.144",
            "public_ip": "3.72.94.12",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03197863dfd17ca88",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a0208a1f2ee944e5",
            "tags": {
              "Environment": "Dev",
              "Name": "BackendInstance"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "BackendInstance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06967421d8a5a6660"
            ]
          },
          "dependencies": [
            "aws_security_group.studyboost_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.studyboost_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "studyboost_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:538773749506:internet-gateway/igw-088480e394fd7babf",
            "id": "igw-088480e394fd7babf",
            "owner_id": "538773749506",
            "tags": {
              "Name": "StudyBoostInternetGateway"
            },
            "tags_all": {
              "Name": "StudyBoostInternetGateway"
            },
            "vpc_id": "vpc-09640c63d580863b6"
          },
          "dependencies": [
            "aws_vpc.studyboost_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:538773749506:route-table/rtb-062a9955ebd901c3f",
            "id": "rtb-062a9955ebd901c3f",
            "owner_id": "538773749506",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-088480e394fd7babf",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "StudyBoostPublicRouteTable"
            },
            "tags_all": {
              "Name": "StudyBoostPublicRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-09640c63d580863b6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.studyboost_igw",
            "aws_vpc.studyboost_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-057a05bf6446abd2b",
            "route_table_id": "rtb-062a9955ebd901c3f",
            "subnet_id": "subnet-0a0208a1f2ee944e5"
          },
          "dependencies": [
            "aws_internet_gateway.studyboost_igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.studyboost_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "studyboost_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:538773749506:security-group/sg-06967421d8a5a6660",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06967421d8a5a6660",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240702054043538300000001",
            "name_prefix": "terraform-",
            "owner_id": "538773749506",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Dev",
              "Name": "StudyBoostSG"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "StudyBoostSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-09640c63d580863b6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.studyboost_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:538773749506:subnet/subnet-0a0208a1f2ee944e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a0208a1f2ee944e5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "538773749506",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "StudyBoostPublicSubnet"
            },
            "tags_all": {
              "Name": "StudyBoostPublicSubnet"
            },
            "vpc_id": "vpc-09640c63d580863b6"
          },
          "dependencies": [
            "aws_vpc.studyboost_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "studyboost_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:538773749506:vpc/vpc-09640c63d580863b6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06ef8b5be041633d4",
            "default_route_table_id": "rtb-085b8679d9651f2de",
            "default_security_group_id": "sg-08f354f44dc1567d9",
            "dhcp_options_id": "dopt-0e995c9230381e6ff",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09640c63d580863b6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-085b8679d9651f2de",
            "owner_id": "538773749506",
            "tags": {
              "Name": "StudyBoostVPC"
            },
            "tags_all": {
              "Name": "StudyBoostVPC"
            }
          }
        }
      ]
    }
  ]
}